// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadTemplate should work 1`] = `
[
  [
    "/tmp/sdk/src/wrapper.ts",
    "export interface ResponseBodyWrapper<T> {
  code: number;
  data: T;
  error?: string;
  message?: string;
}

export interface ResponseListWrapper<T> {
  list: T[];
  page: number;
  page_size: number;
  total: number;
}
",
  ],
  [
    "/tmp/sdk/tsconfig.json",
    "{
  "extends": "../../tsconfig.module.json",
  "include": ["./src"]
}
",
  ],
  [
    "/tmp/sdk/package.json",
    "{
  "name": "@api-sdk/cd-sdk",
  "version": "1.2.3",
  "description": "API SDK for Cd",
  "homepage": "https://github.com/easyops-cn/next-core/tree/master/sdk/cd-sdk",
  "license": "GPL-3.0",
  "type": "module",
  "main": "dist/cjs/index.js",
  "module": "dist/esm/index.js",
  "typings": "dist/types/index.d.ts",
  "files": [
    "dist",
    "contracts.json"
  ],
  "exports": {
    ".": {
      "types": "./dist/types/index.d.ts",
      "import": "./dist/esm/index.js",
      "require": "./dist/cjs/index.js"
    },
    "./package.json": "./package.json"
  },
  "scripts": {
    "clean": "rimraf dist",
    "prestart": "npm run clean",
    "start": "concurrently -k -n types,main \\"npm run start:types\\" \\"npm run start:main\\"",
    "start:main": "cross-env NODE_ENV=development build-next-libs --watch",
    "start:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist/types --watch",
    "prebuild": "npm run clean",
    "build": "npm run build:types && npm run build:main",
    "build:main": "cross-env NODE_ENV=production build-next-libs",
    "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist/types"
  },
  "sideEffects": false,
  "dependencies": {
    "@next-core/http": "^1.0.0"
  },
  "devDependencies": {
    "@next-core/build-next-libs": "^1.0.0"
  }
}
",
  ],
]
`;

exports[`loadTemplate should work for public scope 1`] = `
[
  [
    "/tmp/sdk/src/wrapper.ts",
    "export interface ResponseBodyWrapper<T> {
  code: number;
  data: T;
  error?: string;
  message?: string;
}

export interface ResponseListWrapper<T> {
  list: T[];
  page: number;
  page_size: number;
  total: number;
}
",
  ],
  [
    "/tmp/sdk/tsconfig.json",
    "{
  "extends": "../../tsconfig.module.json",
  "include": ["./src"]
}
",
  ],
  [
    "/tmp/sdk/package.json",
    "{
  "name": "@next-api-sdk/cd-sdk",
  "version": "1.2.3",
  "description": "API SDK for Cd",
  "homepage": "https://github.com/easyops-cn/next-core/tree/master/sdk/cd-sdk",
  "license": "GPL-3.0",
  "type": "module",
  "main": "dist/cjs/index.js",
  "module": "dist/esm/index.js",
  "typings": "dist/types/index.d.ts",
  "files": [
    "dist",
    "contracts.json"
  ],
  "exports": {
    ".": {
      "types": "./dist/types/index.d.ts",
      "import": "./dist/esm/index.js",
      "require": "./dist/cjs/index.js"
    },
    "./package.json": "./package.json"
  },
  "scripts": {
    "clean": "rimraf dist",
    "prestart": "npm run clean",
    "start": "concurrently -k -n types,main \\"npm run start:types\\" \\"npm run start:main\\"",
    "start:main": "cross-env NODE_ENV=development build-next-libs --watch",
    "start:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist/types --watch",
    "prebuild": "npm run clean",
    "build": "npm run build:types && npm run build:main",
    "build:main": "cross-env NODE_ENV=production build-next-libs",
    "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist/types"
  },
  "sideEffects": false,
  "dependencies": {
    "@next-core/http": "^1.0.0"
  },
  "devDependencies": {
    "@next-core/build-next-libs": "^1.0.0"
  }
}
",
  ],
]
`;
